syntax = "proto3";
package tvShow;

message TVShow {
    string id = 1;
    string title = 2;
    string description = 3;
}

message GetTVShowRequest { string tv_show_id = 1; }
message GetTVShowResponse { TVShow tv_show = 1; }

message SearchTVShowRequest { string query = 1; }
message SearchTVShowResponse { repeated TVShow tv_shows = 1; }

// Ajout des messages pour la création de série TV
message CreateTVShowRequest { 
    string id = 1;
    string title = 2; 
    string description = 3; 
}
message CreateTVShowResponse { TVShow tv_show = 1; }

service TVShowService {
    rpc GetTvshow(GetTVShowRequest) returns (GetTVShowResponse);
    rpc SearchTvshows(SearchTVShowRequest) returns (SearchTVShowResponse);
    rpc CreateTvshow(CreateTVShowRequest) returns (CreateTVShowResponse);
}